// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegisterCluster /> renders correctly 1`] = `
<Fragment>
  <PageHeader>
    <Breadcrumbs
      path={
        Array [
          Object {
            "label": "Clusters",
          },
          Object {
            "label": "Register disconnected cluster",
          },
        ]
      }
    />
    <PageHeaderTitle
      title="Register disconnected cluster"
    />
  </PageHeader>
  <PageSection>
    <Card
      id="register-cluster"
    >
      <CardBody>
        <Grid>
          <GridItem
            md={8}
          >
            <TextContent
              id="register-cluster-top-text"
            >
              <Text
                component="p"
              >
                Register clusters that are not connected to OpenShift Cluster Manager. Existing cluster owners, cluster editors, or admins can edit existing cluster subscriptions from the cluster details page.
              </Text>
            </TextContent>
            <Form
              className="subscription-settings form"
            >
              <Field
                component={[Function]}
                disabled={false}
                extendedHelpText="The cluster ID may be found on the About page of the cluster web console"
                isRequired={true}
                label="Cluster ID"
                name="cluster_id"
                type="text"
                validate={[Function]}
              />
              <Field
                component={[Function]}
                disabled={false}
                label="Display name"
                name="display_name"
                type="text"
                validate={[Function]}
              />
              <Field
                component={[Function]}
                disabled={false}
                label="Web console URL"
                name="web_console_url"
                type="text"
                validate={[Function]}
              />
              <Title
                headingLevel="h4"
                size="xl"
              >
                Subscription settings
              </Title>
              <TextContent>
                <Text
                  component="p"
                >
                  Editing the subscription settings will help ensure that you receive the level of support that you expect, and that your cluster is consuming the correct type of subscription.
                </Text>
              </TextContent>
              <EditSubscriptionSettingsFields
                canSubscribeMarketplaceOCP={false}
                canSubscribeStandardOCP={true}
                initialSettings={
                  Object {
                    "isValid": true,
                    "support_level": "Eval",
                  }
                }
                onSettingsChange={[Function]}
              />
            </Form>
          </GridItem>
        </Grid>
      </CardBody>
      <CardFooter>
        <Button
          isDisabled={false}
          type="submit"
          variant="primary"
        >
          Register cluster
        </Button>
        <Link
          to="/"
        >
          <Button
            isDisabled={false}
            variant="secondary"
          >
            Cancel
          </Button>
        </Link>
      </CardFooter>
    </Card>
  </PageSection>
</Fragment>
`;

exports[`<RegisterCluster /> renders correctly when user can't subscribe ocp 1`] = `
<Fragment>
  <PageHeader>
    <Breadcrumbs
      path={
        Array [
          Object {
            "label": "Clusters",
          },
          Object {
            "label": "Register disconnected cluster",
          },
        ]
      }
    />
    <PageHeaderTitle
      title="Register disconnected cluster"
    />
  </PageHeader>
  <PageSection>
    <Card
      id="register-cluster"
    >
      <CardBody>
        <Grid>
          <GridItem
            md={8}
          >
            <TextContent
              id="register-cluster-top-text"
            >
              <Text
                component="p"
              >
                Register clusters that are not connected to OpenShift Cluster Manager. Existing cluster owners, cluster editors, or admins can edit existing cluster subscriptions from the cluster details page.
              </Text>
            </TextContent>
            <Form
              className="subscription-settings form"
            >
              <Field
                component={[Function]}
                disabled={false}
                extendedHelpText="The cluster ID may be found on the About page of the cluster web console"
                isRequired={true}
                label="Cluster ID"
                name="cluster_id"
                type="text"
                validate={[Function]}
              />
              <Field
                component={[Function]}
                disabled={false}
                label="Display name"
                name="display_name"
                type="text"
                validate={[Function]}
              />
              <Field
                component={[Function]}
                disabled={false}
                label="Web console URL"
                name="web_console_url"
                type="text"
                validate={[Function]}
              />
              <Title
                headingLevel="h4"
                size="xl"
              >
                Subscription settings
              </Title>
              <TextContent>
                <Text
                  component="p"
                >
                  Editing the subscription settings will help ensure that you receive the level of support that you expect, and that your cluster is consuming the correct type of subscription.
                </Text>
              </TextContent>
              <Tooltip
                content="You cannot edit subscription settings because your organization does not have any OpenShift subscriptions. Contact sales to purchase OpenShift."
                position="auto"
              >
                <div>
                  <EditSubscriptionSettingsFields
                    canSubscribeMarketplaceOCP={false}
                    canSubscribeStandardOCP={false}
                    initialSettings={
                      Object {
                        "isValid": true,
                        "support_level": "Eval",
                      }
                    }
                    onSettingsChange={[Function]}
                  />
                </div>
              </Tooltip>
            </Form>
          </GridItem>
        </Grid>
      </CardBody>
      <CardFooter>
        <Button
          isDisabled={false}
          type="submit"
          variant="primary"
        >
          Register cluster
        </Button>
        <Link
          to="/"
        >
          <Button
            isDisabled={false}
            variant="secondary"
          >
            Cancel
          </Button>
        </Link>
      </CardFooter>
    </Card>
  </PageSection>
</Fragment>
`;
